INCLUDE_DIRECTORIES(${OCTOON_LIBRARY_OUTPUT_PATH})

ADD_SUBDIRECTORY(RadeonRays_SDK)
ADD_SUBDIRECTORY(glfw)

SET_TARGET_ATTRIBUTE(CLW "contrib")
SET_TARGET_ATTRIBUTE(clw_kernel_cache_h "contrib")
SET_TARGET_ATTRIBUTE(GTest "contrib")
SET_TARGET_ATTRIBUTE(UnitTest "contrib")
SET_TARGET_ATTRIBUTE(Calc "contrib")
SET_TARGET_ATTRIBUTE(RadeonRays "contrib")
SET_TARGET_ATTRIBUTE(glfw "contrib")