# contrib folders
#INCLUDE_DIRECTORIES(${OCTOON_RAY_PATH_DEPENDENCIES}/zlib)
#INCLUDE_DIRECTORIES(${OCTOON_RAY_PATH_DEPENDENCIES}/zipper)

# octoon folder
INCLUDE_DIRECTORIES(${OCTOON_RAY_PATH_INCLUDE})
INCLUDE_DIRECTORIES(${OCTOON_RAY_PATH_DEPENDENCIES}/RadeonRays_SDK/RadeonRays/include)

# lib folder for link
LINK_DIRECTORIES(${OCTOON_RAY_LIBRARY_OUTPUT_PATH})

# runtime libraries
#ADD_SUBDIRECTORY(octoon-math)

# framework
ADD_SUBDIRECTORY(octoon-ray)