# octoon folder
INCLUDE_DIRECTORIES(${OCTOON_RAY_PATH_INCLUDE})
INCLUDE_DIRECTORIES(${OCTOON_RAY_PATH_DEPENDENCIES}/glfw/include)
INCLUDE_DIRECTORIES(${OCTOON_RAY_PATH_DEPENDENCIES}/RadeonRays_SDK/RadeonRays/include)

# lib folder for link
LINK_DIRECTORIES(${OCTOON_RAY_LIBRARY_OUTPUT_PATH})

# framework
ADD_SUBDIRECTORY(octoon-ray)