# octoon folder
INCLUDE_DIRECTORIES(${OCTOON_PATH_INCLUDE})
INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/glew/include)
INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/glfw/include)
INCLUDE_DIRECTORIES(${OCTOON_PATH_DEPENDENCIES}/RadeonRays_SDK/RadeonRays/include)

# lib folder for link
LINK_DIRECTORIES(${OCTOON_LIBRARY_OUTPUT_PATH})

# framework
ADD_SUBDIRECTORY(octoon-caustic)